fix overflow (#66)

--- a/src/layout/OrderableList/OrderableList.css
+++ b/src/layout/OrderableList/OrderableList.css
@@ -4,6 +4,7 @@
     background-color: var(--color-background-secondary);
     border-radius: 3px;
     border: 1px solid rgba(0,0,0,0.15);
+    overflow-y: scroll;
 }
 
 .OrderableListTitle {
